<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inner_cardview_item_layout_id"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/inner_cardview_linearlayout"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/subamountbox"
                android:text="@string/example_amount"
                android:inputType="numberDecimal"/>
            <EditText
                android:layout_width="wrap_content"
                android:id="@+id/purposebox"
                android:layout_height="wrap_content"
                android:hint="@string/purpose_hint"
                android:text="@string/default_pupose_entry"
                android:inputType="textPersonName"/>

            <ImageButton
                android:id="@+id/inneraddbutton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/add_button_size"
                android:src="@drawable/addbutton"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:background="@color/cardview_light_background"
                />
            <ImageButton
                android:id="@+id/innerdeletebutton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/delete_button_size"
                android:src="@drawable/deletebutton"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:background="@color/cardview_light_background"
                />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>