<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inner_cardview_item_layout_id"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30sp"
    android:layout_marginRight="30sp"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/inner_cardview_linearlayout"
            android:layout_height="wrap_content"
            android:background="#ffebee"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                style="@style/childListView"
                android:layout_width="0dp"
                android:layout_marginStart="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.06"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"
                android:id="@+id/subamountbox"

                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/example_amount"
                />
            <TextView
                style="@style/childListView"
                android:layout_width="0dp"
                android:layout_weight="0.06"
                android:id="@+id/purposebox"
                android:layout_height="wrap_content"
                android:hint="@string/purpose_hint"
                android:text="@string/default_pupose_entry"
                android:inputType="textPersonName"/>

            <ImageButton
                android:id="@+id/inneraddbutton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_size_child"
                android:src="@drawable/addbutton_resized2"
                android:background="#ffebee"
                android:scaleType="fitXY"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                />
            <ImageButton
                android:id="@+id/innerdeletebutton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_size_child"
                android:src="@drawable/deletebutton_resized2"
                android:background="#ffebee"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                />
            <ImageButton
                android:id="@+id/innereditbutton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_size_child"
                android:src="@drawable/appbar_draw_pencil"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:background="#ffebee"
                />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>